# fintraffic-departures

./: .gitignore  LICENSE  README.md  departures.http  hacs.json  pyproject.toml  sample-response.json
.github/: copilot-instructions.md  labels.yml  release-drafter.yml
.github/workflows/: label-sync.yml  release-drafter.yml  release.yml  validate.yml
custom_components/fintraffic_departures/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json  models.py  sensor.py  strings.json
custom_components/fintraffic_departures/translations/: fi.json  sv.json
custom_components/transit_departures/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json  models.py  sensor.py  strings.json
custom_components/transit_departures/translations/: en.json  fi.json  sv.json
tests/: conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_sensor.py
tests/fixtures/: api_payloads.py
