[project]
name = "ha-transit-departures"
description = "Home Assistant custom integration for FinTraffic departures"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "mickut" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
test = [
  "homeassistant>=2026.5.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-socket>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
